# ModShot-mkxp-z

./: .gitignore  README.md  meson.build  meson_options.txt  mkxp.json  modshot.json
.github/workflows/: autobuild.yml
assets/: meson.build
binding/: audio-binding.cpp  binding-mri.cpp  binding-util.cpp  graphics-binding.cpp  input-binding.cpp  meson.build  plane-binding.cpp  sprite-binding.cpp  steam-binding.cpp  tilemap-binding.cpp
binding/oneshot/: journal-binding.cpp  niko-binding.cpp  oneshot-binding.cpp  wallpaper-binding.cpp
linux/: AppImage.desktop.in  AppRun.in  Makefile  install.sh  meson.build  ruby-extconf-openssl.patch  vars.sh
macos/: icon.icns  setup.command
macos/ModShot.xcodeproj/: project.pbxproj
macos/ModShot.xcodeproj/xcshareddata/xcschemes/: Intel (Steam).xcscheme  Intel.xcscheme  Steamshim.xcscheme  Universal (Steam).xcscheme  Universal.xcscheme
macos/config/: Info.plist  ModShot.xcconfig  mkxp-z.Intel.xcconfig  mkxp-z.Universal.xcconfig  mkxp-z.xcconfig  steamshim.xcconfig
macos/dependencies/: Brewfile  arm64.make  common.make  make_universal.sh  setup.sh  x86_64.make
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/mkxp-z.xcodeproj/xcshareddata/xcschemes/: Intel (Steam).xcscheme  Intel.xcscheme  Steamshim.xcscheme  Universal (Steam).xcscheme  Universal.xcscheme
macos/views/: SettingsMenuController.h  SettingsMenuController.mm  TouchBar.h  TouchBar.mm  sdl_codes.h
macos/views/Assets.xcassets/reset.imageset/: Contents.json
shader/: meson.build
src/: config.cpp  config.h  eventthread.cpp  eventthread.h  main.cpp  meson.build  settingsmenu.cpp  sharedstate.cpp  sharedstate.h
src/audio/: audio.cpp  audio.h  audiostream.cpp
src/display/: bitmap.cpp  font.cpp  graphics.cpp  graphics.h  plane.cpp  plane.h  sprite.cpp  sprite.h  tilemap.cpp
src/display/gl/: shader.cpp  shader.h
src/filesystem/: filesystemImplApple.mm
src/input/: input.cpp  input.h  keybindings.cpp
src/oneshot/: gnome-fun.cpp  gnome-fun.h  i18n.cpp  i18n.h  journal.cpp  journal.h  oneshot-apple.h  oneshot-apple.mm  oneshot.cpp  oneshot.h  wallpaper.cpp  wallpaper.h  xfconf-fun.cpp  xfconf-fun.h
src/steam/: steam.cpp  steam.h
src/system/: system.h  systemImpl.cpp  systemImplApple.mm
src/theoraplay/: theoraplay.c
src/util/: sdl-util.h  xdg-user-dirs.cpp  xdg-user-dirs.h
windows/: Makefile  install.sh  meson.build  vars.sh
